ansible/haproxy-ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: haproxy.org/ingress-controller
